--- a/.github/workflows/build_16_withssl_ex.yml
+++ b/.github/workflows/build_16_withssl_ex.yml
@@ -13,11 +13,11 @@ env:
 jobs:      
   build_ios:
     name: iOS
-    runs-on: macos-12
+    runs-on: macos-11
     steps:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '13'
+        xcode-version: '12'
     - uses: actions/checkout@v2
     - name: npm install
       shell: bash
@@ -34,9 +34,34 @@ jobs:
         name: nodejs_bin
         path: ~/puerts-node/**/*
         
+  build_android_arm64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: npm install
+        shell: bash
+        run: npm install
+      - name: Install NDK
+        run: |
+          cd ~
+          wget -O NDK -q https://dl.google.com/android/repository/android-ndk-r21b-linux-x86_64.zip
+          sudo apt install unzip -y
+          unzip -q NDK
+      - name: Build
+        run: |
+          cd $GITHUB_WORKSPACE
+          bash ./android-static.sh ${{env.VERSION}} arm64 1
+      - name: Rename
+        run: |
+          mv ~/puerts-node/nodejs ~/puerts-node/nodejs_16
+      - uses: actions/upload-artifact@v2
+        with:
+          name: nodejs_bin
+          path: ~/puerts-node/**/*      
+        
   publish:
     runs-on: ubuntu-latest
-    needs: [build_ios]
+    needs: [build_ios,build_android_arm64]
     steps:
       - uses: actions/download-artifact@v1
         with:
